# SonoAssist

./: .gitignore  README.md  todo.todo
AcquisitionScripts/: imu_display.py
SonoAssist/: CMakeLists.txt  CMakeSettings.json  CUGNModel.cpp  CUGNModel.h  ClariusProbeClient.cpp  ClariusProbeClient.h  GazeTracker.cpp  GazeTracker.h  MLModel.cpp  MLModel.h  MetaWearBluetoothClient.cpp  MetaWearBluetoothClient.h  OSKeyDetector.cpp  OSKeyDetector.h  ParamEditor.cpp  ParamEditor.h  ParamEditor.ui  RGBDCameraClient.cpp  RGBDCameraClient.h  ScreenRecorder.cpp  ScreenRecorder.h  SensorDevice.cpp  SensorDevice.h  SensorExample.cpp  SensorExample.h  SonoAssist.cpp  SonoAssist.h  SonoAssist.sln  SonoAssist.ui  conanfile.txt  main.cpp  main.h  process_management.cpp  process_management.h
SonoAssist/SonoAssist/: ClariusProbeClient.cpp  ClariusProbeClient.h  GazeTracker.cpp  GazeTracker.h  MetaWearArray.cpp  MetaWearArray.h  MetaWearBluetoothClient.cpp  MetaWearBluetoothClient.h  OSKeyDetector.h  RGBDCameraClient.cpp  RGBDCameraClient.h  ScreenRecorder.cpp  ScreenRecorder.h  SensorDevice.cpp  SensorDevice.h  SensorExample.cpp  SensorExample.h  SonoAssist.cpp  SonoAssist.h  SonoAssist.qrc  SonoAssist.ui  SonoAssist.vcxproj  SonoAssist.vcxproj.filters  WindowPainter.cpp  WindowPainter.h  background_thread_sample_windows.cpp  dump.rdb  main.cpp  main.h  process_management.cpp  resource.h
SonoAssist/SonoAssist/x64/Debug/moc/: moc_SonoAssist.cpp
SonoAssist/SonoAssist/x64/Debug/qmake/: qtvars_x64_Debug.props
SonoAssist/SonoAssist/x64/Debug/rcc/: qrc_SonoAssist.cpp
SonoAssist/SonoAssist/x64/Debug/uic/: ui_SonoAssist.h
SonoAssist/SonoAssist/x64/Release/qmake/: qtvars_x64_Release.props
SonoAssist/x64/Debug/: SonoAssist.ilk
SonoAssistDisplay/: glut-cube.py
SonoAssistParams/: acquisition_params.xml  test.csv
SonoAssistScripts/: acquisition_rate_measurements.py  config.json  display_live_cugn.py  display_live_imu.py  display_live_probe.py  display_recorded_imu.py  gaze_accuracy_measurements.py  generate_training_data.py  generate_us _saliency_maps.py  generate_us_saliency_maps.py  imu_position_estimatinon.py  jerk_test.py  measurements.py  obj_track.py  rate_measurement.py  stream_from_redis_example.py  temporal_calibration.py  testing.py  time_synchronization.py
SonoAssistScripts/sonopy/: setup.py
SonoAssistScripts/sonopy/sonopy/: __init__.py  clarius.py  config.py  file_management.py  gaze.py  imu.py  tracking.py  video.py  video_manager.py
UtilityScripts/: install_opencv3.sh  install_realsens.sh
Utils/: dependencies-download.ps1
scripts/: install_freenect.sh  install_metawear_sdk.sh  install_opencv3.sh
